# wasmBasics

./: Cargo.toml
.github/workflows/: deploy.yml
pkg/: package.json  wasmBasics.js  wasmBasics_bg.js  wasmBasics_bg.wasm  wasm_basics.d.ts  wasm_basics.js  wasm_basics_bg.js  wasm_basics_bg.wasm.d.ts
src/: game.rs  lib.rs  main.rs
web/: index.html  index.js  webpack.config.js
