[package]
name = "wasm_basics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"

# [toolchain]
# channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
